Müşteri ürünleri görebiliyor.
Satıcı ürün ekleyebiliyor.

Müşteri sepet oluşturabiliyor.

Sipariş verilebiliyor.

Stripe üzerinden ödeme yapılabiliyor (test ortamı).

Ödeme başarılıysa sipariş otomatik DELIVERED oluyor.

Admin isterse siparişleri yönetebiliyor.